Remoção do encoder Base64 do pacote sun.misc